--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
         <ul class="nav-menu">
             <li>
-                <a href="./index.html" class="nav-link current">Studio</a></li>
+                <a class="nav-link current" href="./index.html">Studio</a></li>
             <li>
                 <a href="" class="nav-link">Portfolio</a></li>
             <li>
