--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
      </header>
     <main>
-        <section id="heroimage" class="hero-image" style="background: #2e2f42;">
+        <section id="heroimage" class="hero-image">
             <div class="container hero-container">
                    <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button type="button" class="order-button order-service">Order Service</button>
