--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             <h2 hidden class="visually-hidden"></h2>
             <ul class="name-opportunities">
                 <li class="opportunities-lists">
+                    <div class="opportunities-icons-container">
+                        <svg class="opportunities-icons" width="64" height="64">
+                        <use href="../images/icons.svg.antena"></use></svg>
+                    </div>
                 <h3 class="opportunities-section">Strategy</h3>
                 <p class="opportunities-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
