--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li class="opportunities-lists">
                     <div class="opportunities-icons-container">
                         <svg class="opportunities-icons" width="64" height="64">
-                        <use href="../images/icons.svg#antena"></use></svg>
+                        <use href="../images/icons.svg#antena-1"></use></svg>
                     </div>
                 <h3 class="opportunities-section">Strategy</h3>
                 <p class="opportunities-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
