--- a/index.html
+++ b/index.html
@@ -50,20 +50,35 @@
                 <li class="opportunities-lists">
                     <div class="opportunities-icons-container">
                         <svg class="opportunities-icons" width="64" height="64">
-                        <use href="../images/icons.svg#antena-1"></use></svg>
+                        <use href="../images/icons.svg#icon-antena"></use></svg>
                     </div>
                 <h3 class="opportunities-section">Strategy</h3>
                 <p class="opportunities-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="opportunities-lists">
+                    <div class="opportunities-icons-container">
+                        <svg class="opportunities-icons" width="64" height="64">
+                            <use href=""></use>
+                        </svg>
+                    </div>
                     <h3 class="opportunities-section">Punctuality</h3>
                     <p class="opportunities-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="opportunities-lists">
+                    <div class="opportunities-icons-container">
+                        <svg class="opportunities-icons" width="64" height="64">
+                            <use href=""></use>
+                        </svg>
+                    </div>
                     <h3 class="opportunities-section">Diligence</h3>
                     <p class="opportunities-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                  </li>
                  <li class="opportunities-lists">
+                    <div class="opportunities-icons-container">
+                        <svg class="opportunities-icons" width="64" height="64">
+                            <use href=""></use>
+                        </svg>
+                    </div>
                     <h3 class="opportunities-section">Technologies</h3>
                     <p class="opportunities-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
