--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
                 <li class="opportunities-lists">
                     <div class="opportunities-icons-container">
                         <svg class="opportunities-icons" width="64" height="64">
-                        <use href="../images/icons.svg#icon-antena"></use></svg>
+                        <use href="./images/icons.svg#icon-antenna"></use></svg>
                     </div>
                 <h3 class="opportunities-section">Strategy</h3>
                 <p class="opportunities-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="opportunities-lists">
                     <div class="opportunities-icons-container">
-                        <svg class="opportunities-icons" width="64" height="64">
-                            <use href=""></use>
+                        <svg class=>
+                            <use href="./images/icons.svg#icon-clock"></use>
                         </svg>
                     </div>
                     <h3 class="opportunities-section">Punctuality</h3>
@@ -66,8 +66,8 @@
                 </li>
                 <li class="opportunities-lists">
                     <div class="opportunities-icons-container">
-                        <svg class="opportunities-icons" width="64" height="64">
-                            <use href=""></use>
+                        <svg class=>
+                            <use href="./images/icons.svg#icon-diagram"></use>
                         </svg>
                     </div>
                     <h3 class="opportunities-section">Diligence</h3>
@@ -75,8 +75,8 @@
                  </li>
                  <li class="opportunities-lists">
                     <div class="opportunities-icons-container">
-                        <svg class="opportunities-icons" width="64" height="64">
-                            <use href=""></use>
+                        <svg class=>
+                            <use href="./images/icons.svg#icon-astronaut"></use>
                         </svg>
                     </div>
                     <h3 class="opportunities-section">Technologies</h3>
@@ -94,6 +94,36 @@
                  <div class="team-team">
                 <h3 class="name-team">Mark Guerrero</h3>
                     <p class="team-profession">Product Designer</p>
+                    <ul class="icons-team">
+                        <li class="icons-team-item">
+                            <a href="" class="icons-item">
+                                <svg class="icons-item-item" width="" height="">
+                                    <use href=""></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icons-team-item">
+                            <a href="" class="icons-item">
+                                <svg class="icons-item-item" width="" height="">
+                                    <use href=""></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icons-team-item">
+                            <a href="" class="icons-item">
+                                <svg class="icons-item-item" width="" height="">
+                                    <use href=""></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icons-team-item">
+                            <a href="" class="icons-item">
+                                <svg class="icons-item-item" width="" height="">
+                                    <use href=""></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                     </div>
                     </li>
                 <li class="team-list">
@@ -101,6 +131,36 @@
                     <div class="team-team">
                      <h3 class="name-team">Tom Ford</h3>
                     <p class="team-profession">Frontend Developer</p>
+                    <ul class="icons-team">
+                    <li class="icons-team-item">
+                        <a href="" class="icons-item">
+                            <svg class="icons-item-item" width="" height="">
+                                <use href=""></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icons-team-item">
+                        <a href="" class="icons-item">
+                            <svg class="icons-item-item" width="" height="">
+                                <use href=""></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icons-team-item">
+                        <a href="" class="icons-item">
+                            <svg class="icons-item-item" width="" height="">
+                                <use href=""></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icons-team-item">
+                        <a href="" class="icons-item">
+                            <svg class="icons-item-item" width="" height="">
+                                <use href=""></use>
+                            </svg>
+                        </a>
+                    </li>
+                    </ul>
                     </div>
                 </li>
                 <li class="team-list">
@@ -108,6 +168,36 @@
                    <div class="team-team">
                     <h3 class="name-team">Camila Garcia</h3>
                     <p class="team-profession">Marketing</p>
+                    <ul class="icons-team">
+                        <li class="icons-team-item">
+                            <a href="" class="icons-item">
+                                <svg class="icons-item-item" width="" height="">
+                                    <use href=""></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icons-team-item">
+                            <a href="" class="icons-item">
+                                <svg class="icons-item-item" width="" height="">
+                                    <use href=""></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icons-team-item">
+                            <a href="" class="icons-item">
+                                <svg class="icons-item-item" width="" height="">
+                                    <use href=""></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icons-team-item">
+                            <a href="" class="icons-item">
+                                <svg class="icons-item-item" width="" height="">
+                                    <use href=""></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
                 <li class="team-list"> 
@@ -115,6 +205,36 @@
                  <div class="team-team">
                   <h3 class="name-team">Daniel Wilson</h3>
                    <p class="team-profession">UI Designer</p>
+                   <ul class="icons-team">
+                    <li class="icons-team-item">
+                        <a href="" class="icons-item">
+                            <svg class="icons-item-item" width="" height="">
+                                <use href=""></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icons-team-item">
+                        <a href="" class="icons-item">
+                            <svg class="icons-item-item" width="" height="">
+                                <use href=""></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icons-team-item">
+                        <a href="" class="icons-item">
+                            <svg class="icons-item-item" width="" height="">
+                                <use href=""></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icons-team-item">
+                        <a href="" class="icons-item">
+                            <svg class="icons-item-item" width="" height="">
+                                <use href=""></use>
+                            </svg>
+                        </a>
+                    </li>
+                   </ul>
                    </div>
                  </li>
               </ul>
@@ -125,42 +245,61 @@
                 <h2 class="portfolio-section">Our Portfolio</h2>
                 <ul class="portfolio-item">
                     <li class="portfolio-list">
-                        <img src="./images/img1.jpg" alt="App" width="360" height="300">
+                    <div class="portfolio-box">
+                    <img src="./images/img1.jpg" alt="App" width="360" height="300">
+                    <p class="text-hidden">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                    </div>
                         <div class="portfolio-type-name">
                         <h3 class="name-portfolio">Banking App</h3>
                         <p class="type-communication">App</p>
                         </div>
-                    </li>
-                    <li class="portfolio-list">
+                       <li class="portfolio-list">
+                        <div class="portfolio-box">
                         <img src="./images/img2.jpg" alt="Marketing" width="360" height="300">
+                        <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-type-name">
                         <h3 class="name-portfolio">Cashless Payment</h3>
                         <p class="type-communication">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-list">
+                        <div class="portfolio-box">
                         <img src="./images/img3.jpg" alt="App" width="360" height="300">
+                        <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-type-name">
                         <h3 class="name-portfolio">Meditation App</h3>
                         <p class="type-communication">App</p>
                     </div>
                     </li>
                     <li class="portfolio-list">
+                        <div class="portfolio-box">
                         <img src="./images/img4.jpg" alt="Marketing" width="360" height="300">
+                        <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-type-name">
                         <h3 class="name-portfolio">Taxi Service</h3>
                         <p class="type-communication">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-list">
+                        <div class="portfolio-box">
                         <img src="./images/img5.jpg" alt="Design" width="360" height="300">
+                        <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-type-name">
                         <h3 class="name-portfolio">Screen Illustrations</h3>
                         <p class="type-communication">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-list">
+                        <div class="portfolio-box">
                         <img src="./images/img6.jpg" alt="Marketing" width="360" height="300">
+                        <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-type-name">
                         <h3 class="name-portfolio">Online Courses</h3>
                         <p class="type-communication">Marketing</p>
