--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <ul class="name-opportunities">
                 <li class="opportunities-lists">
                     <div class="opportunities-icons-container">
-                        <svg class="opportunities-icons" width="64" height="64">
+                        <svg class="icons" width="64" height="64">
                         <use href="./images/icons.svg#icon-antenna"></use></svg>
                     </div>
                 <h3 class="opportunities-section">Strategy</h3>
@@ -57,7 +57,7 @@
                 </li>
                 <li class="opportunities-lists">
                     <div class="opportunities-icons-container">
-                        <svg class=>
+                        <svg class="icons" width="64" height="64">
                             <use href="./images/icons.svg#icon-clock"></use>
                         </svg>
                     </div>
@@ -66,7 +66,7 @@
                 </li>
                 <li class="opportunities-lists">
                     <div class="opportunities-icons-container">
-                        <svg class=>
+                        <svg class="icons" width="64" height="64">
                             <use href="./images/icons.svg#icon-diagram"></use>
                         </svg>
                     </div>
@@ -75,7 +75,7 @@
                  </li>
                  <li class="opportunities-lists">
                     <div class="opportunities-icons-container">
-                        <svg class=>
+                        <svg class="icons" width="64" height="64">
                             <use href="./images/icons.svg#icon-astronaut"></use>
                         </svg>
                     </div>
