--- a/index.html
+++ b/index.html
@@ -96,30 +96,30 @@
                     <p class="team-profession">Product Designer</p>
                     <ul class="icons-team">
                         <li class="icons-team-item">
-                            <a href="" class="icons-item">
-                                <svg class="icons-item-item" width="" height="">
-                                    <use href=""></use>
+                            <a href="https://www.instagram.com/" target="_blank" class="icons-item">
+                                <svg class="icons-item-item" width="16" height="16">
+                                    <use href="./images/icons#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icons-team-item">
-                            <a href="" class="icons-item">
-                                <svg class="icons-item-item" width="" height="">
-                                    <use href=""></use>
+                            <a href="https://www.twitter.com/" target="_blank" class="icons-item">
+                                <svg class="icons-item-item" width="16" height="16">
+                                    <use href="./images/icons#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icons-team-item">
-                            <a href="" class="icons-item">
-                                <svg class="icons-item-item" width="" height="">
-                                    <use href=""></use>
+                            <a href="https://www.facebook.com/" target="_blank" class="icons-item">
+                                <svg class="icons-item-item" width="16" height="16">
+                                    <use href="./images/icons#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icons-team-item">
-                            <a href="" class="icons-item">
-                                <svg class="icons-item-item" width="" height="">
-                                    <use href=""></use>
+                            <a href="https://www.linkedin.com/" target="_blank" class="icons-item">
+                                <svg class="icons-item-item" width="16" height="16">
+                                    <use href="./images/icons#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -133,30 +133,30 @@
                     <p class="team-profession">Frontend Developer</p>
                     <ul class="icons-team">
                     <li class="icons-team-item">
-                        <a href="" class="icons-item">
-                            <svg class="icons-item-item" width="" height="">
-                                <use href=""></use>
+                        <a href="https://www.instagram.com/" target="_blank" class="icons-item">
+                            <svg class="icons-item-item" width="16" height="16">
+                                <use href="./images/icons#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icons-team-item">
-                        <a href="" class="icons-item">
-                            <svg class="icons-item-item" width="" height="">
-                                <use href=""></use>
+                        <a href="https://www.twitter.com/" target="_blank" class="icons-item">
+                            <svg class="icons-item-item" width="16" height="16">
+                                <use href="./images/icons#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icons-team-item">
-                        <a href="" class="icons-item">
-                            <svg class="icons-item-item" width="" height="">
-                                <use href=""></use>
+                        <a href="https://www.facebook.com/" target="_blank" class="icons-item">
+                            <svg class="icons-item-item" width="16" height="16">
+                                <use href="./images/icons#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icons-team-item">
-                        <a href="" class="icons-item">
-                            <svg class="icons-item-item" width="" height="">
-                                <use href=""></use>
+                        <a href="https://www.linkedin.com/" target="_blank" class="icons-item">
+                            <svg class="icons-item-item" width="16" height="16">
+                                <use href="./images/icons#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
@@ -170,30 +170,30 @@
                     <p class="team-profession">Marketing</p>
                     <ul class="icons-team">
                         <li class="icons-team-item">
-                            <a href="" class="icons-item">
-                                <svg class="icons-item-item" width="" height="">
-                                    <use href=""></use>
+                            <a href="https://www.instagram.com/" target="_blank" class="icons-item">
+                                <svg class="icons-item-item" width="16" height="16">
+                                    <use href="./images/icons#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icons-team-item">
-                            <a href="" class="icons-item">
-                                <svg class="icons-item-item" width="" height="">
-                                    <use href=""></use>
+                            <a href="https://www.twitter.com/" target="_blank" class="icons-item">
+                                <svg class="icons-item-item" width="16" height="16">
+                                    <use href="./images/icons#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icons-team-item">
-                            <a href="" class="icons-item">
-                                <svg class="icons-item-item" width="" height="">
-                                    <use href=""></use>
+                            <a href="https://www.facebook.com/" target="_blank" class="icons-item">
+                                <svg class="icons-item-item" width="16" height="16">
+                                    <use href="./images/icons#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icons-team-item">
-                            <a href="" class="icons-item">
-                                <svg class="icons-item-item" width="" height="">
-                                    <use href=""></use>
+                            <a href="https://www.linkedin.com/" target="_blank" class="icons-item">
+                                <svg class="icons-item-item" width="16" height="16">
+                                    <use href="./images/icons#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -207,30 +207,30 @@
                    <p class="team-profession">UI Designer</p>
                    <ul class="icons-team">
                     <li class="icons-team-item">
-                        <a href="" class="icons-item">
-                            <svg class="icons-item-item" width="" height="">
-                                <use href=""></use>
+                        <a href="https://www.instagram.com/" target="_blank" class="icons-item">
+                            <svg class="icons-item-item" width="16" height="16">
+                                <use href="./images/icons#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icons-team-item">
-                        <a href="" class="icons-item">
-                            <svg class="icons-item-item" width="" height="">
-                                <use href=""></use>
+                        <a href="https://www.twitter.com/" target="_blank" class="icons-item">
+                            <svg class="icons-item-item" width="16" height="16">
+                                <use href="./images/icons#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icons-team-item">
-                        <a href="" class="icons-item">
-                            <svg class="icons-item-item" width="" height="">
-                                <use href=""></use>
+                        <a href="https://www.facebook.com/" target="_blank" class="icons-item">
+                            <svg class="icons-item-item" width="16" height="16">
+                                <use href="./images/icons#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icons-team-item">
-                        <a href="" class="icons-item">
-                            <svg class="icons-item-item" width="" height="">
-                                <use href=""></use>
+                        <a href="https://www.linkedin.com/" target="_blank" class="icons-item">
+                            <svg class="icons-item-item" width="16" height="16">
+                                <use href="./images/icons#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
