--- a/index.html
+++ b/index.html
@@ -98,28 +98,28 @@
                         <li class="icons-team-item">
                             <a href="https://www.instagram.com/" target="_blank" class="icons-item">
                                 <svg class="icons-item-item" width="16" height="16">
-                                    <use href="./images/icons#icon-instagram"></use>
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icons-team-item">
                             <a href="https://www.twitter.com/" target="_blank" class="icons-item">
                                 <svg class="icons-item-item" width="16" height="16">
-                                    <use href="./images/icons#icon-twitter"></use>
+                                    <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icons-team-item">
                             <a href="https://www.facebook.com/" target="_blank" class="icons-item">
                                 <svg class="icons-item-item" width="16" height="16">
-                                    <use href="./images/icons#icon-facebook"></use>
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icons-team-item">
                             <a href="https://www.linkedin.com/" target="_blank" class="icons-item">
                                 <svg class="icons-item-item" width="16" height="16">
-                                    <use href="./images/icons#icon-linkedin"></use>
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -135,28 +135,28 @@
                     <li class="icons-team-item">
                         <a href="https://www.instagram.com/" target="_blank" class="icons-item">
                             <svg class="icons-item-item" width="16" height="16">
-                                <use href="./images/icons#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icons-team-item">
                         <a href="https://www.twitter.com/" target="_blank" class="icons-item">
                             <svg class="icons-item-item" width="16" height="16">
-                                <use href="./images/icons#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icons-team-item">
                         <a href="https://www.facebook.com/" target="_blank" class="icons-item">
                             <svg class="icons-item-item" width="16" height="16">
-                                <use href="./images/icons#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icons-team-item">
                         <a href="https://www.linkedin.com/" target="_blank" class="icons-item">
                             <svg class="icons-item-item" width="16" height="16">
-                                <use href="./images/icons#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
@@ -172,28 +172,28 @@
                         <li class="icons-team-item">
                             <a href="https://www.instagram.com/" target="_blank" class="icons-item">
                                 <svg class="icons-item-item" width="16" height="16">
-                                    <use href="./images/icons#icon-instagram"></use>
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icons-team-item">
                             <a href="https://www.twitter.com/" target="_blank" class="icons-item">
                                 <svg class="icons-item-item" width="16" height="16">
-                                    <use href="./images/icons#icon-twitter"></use>
+                                    <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icons-team-item">
                             <a href="https://www.facebook.com/" target="_blank" class="icons-item">
                                 <svg class="icons-item-item" width="16" height="16">
-                                    <use href="./images/icons#icon-facebook"></use>
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icons-team-item">
                             <a href="https://www.linkedin.com/" target="_blank" class="icons-item">
                                 <svg class="icons-item-item" width="16" height="16">
-                                    <use href="./images/icons#icon-linkedin"></use>
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -209,28 +209,28 @@
                     <li class="icons-team-item">
                         <a href="https://www.instagram.com/" target="_blank" class="icons-item">
                             <svg class="icons-item-item" width="16" height="16">
-                                <use href="./images/icons#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icons-team-item">
                         <a href="https://www.twitter.com/" target="_blank" class="icons-item">
                             <svg class="icons-item-item" width="16" height="16">
-                                <use href="./images/icons#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icons-team-item">
                         <a href="https://www.facebook.com/" target="_blank" class="icons-item">
                             <svg class="icons-item-item" width="16" height="16">
-                                <use href="./images/icons#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="icons-team-item">
                         <a href="https://www.linkedin.com/" target="_blank" class="icons-item">
                             <svg class="icons-item-item" width="16" height="16">
-                                <use href="./images/icons#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
